rbx-dom/rbx_dom_weak/src/snapshots/rbx_dom_weak__dom__test__transfer-3.snap
---
source: rbx-dom/rbx_dom_weak/src/dom.rs
expression: viewer.view_children(&dest)
---
- referent: referent-0
  name: Target
  class: Folder
  properties: {}
  children:
    - referent: referent-1
      name: Some Child
      class: Part
      properties: {}
      children: []
