rbx-dom/rbx_dom_weak/src/snapshots/rbx_dom_weak__dom__test__transfer_within-2.snap
---
source: rbx-dom/rbx_dom_weak/src/dom.rs
expression: viewer.view_children(&dom)
---
- referent: referent-0
  name: Source
  class: Folder
  properties: {}
  children: []
- referent: referent-3
  name: Dest
  class: Folder
  properties: {}
  children:
    - referent: referent-1
      name: Root
      class: Folder
      properties: {}
      children:
        - referent: referent-2
          name: SpawnLocation
          class: SpawnLocation
          properties: {}
          children: []
